fix registration page

--- a/www/style.css
+++ b/www/style.css
@@ -877,3 +877,4 @@ table.routes .route {min-width: 200px}
 .member-admin {font-weight: bold}
 #club-members > li.active > a {background-color: #6f3612; color: #fff}
 #club-members > li > a {color: #6f3612; text-decoration: none}
+.question {float: left; margin-left: 5px;margin-top: 7px}
