--- a/www/style.css
+++ b/www/style.css
@@ -461,7 +461,7 @@ h5.title-hr {font-size: 13px; font-weight: 600; padding-left: 8px}
 .chat-dialog .message {margin-bottom: 20px}
 .chat-dialog .avatar {margin-right: 5px; margin-bottom: 25px; width: 60px; height: 60px; float: left}
 .chat-dialog {border-bottom: 1px #eee solid; padding-bottom: 10px; margin-bottom: 10px; margin-left: 0 !important}
-.chat-window {height: 600px; overflow-y: scroll;}
+.chat-window {max-height: 600px; overflow-y: scroll;}
 .chat-window .span5{width: 360px}
 form.add-chat-message {padding: 10px 0; margin-bottom: 0}
 form.add-chat-message .controls-row [class*="span"] {margin-left: 2px !important}
@@ -801,8 +801,9 @@ ul.uploaded-photos-list li .new-uploaded-img img.img-polaroid {height: 90px; wid
 
 /* gallery-in-post */
 ul.gallery-in-post {margin-left: 0; list-style: none; height: 360px}
-ul.gallery-in-post li a >div{width: 85px !important; height: 85px; padding-bottom: 0px;margin-bottom: 3px !important; margin-left: 360px; background-size: cover !important; background-position: center center; background-repeat: no-repeat;}
-ul.gallery-in-post li:first-child a > div{width: 350px !important; height: 350px; float: left; margin-left: 0}
+ul.gallery-in-post li {width: 85px !important; height: 85px; padding-bottom: 0px;margin-bottom: 3px !important; margin-left: 360px; background-size: cover !important; background-position: center center; background-repeat: no-repeat;}
+ul.gallery-in-post li:first-child {height:auto !important;width: 350px !important; max-height: 350px; float: left; margin-left: 0}
+ul.gallery-in-post li:first-child img{max-height: 350px;}
 .modal-gallery-post div.comments {margin: 0 10px}
 .modal-gallery-post div.comments ul.comments-lists > li {margin-left: 0}
 div.modal900.modal-gallery-post div.comments ul.comments-lists li.answer-form form.max {background: none}
