--- a/www/style_temp.css
+++ b/www/style_temp.css
@@ -5,3 +5,4 @@
 #advTabsContent .chosen-container {z-index: 10; }
 #advTabsContent .chosen-container.chosen-with-drop {z-index: 9999; position: absolute; margin-bottom: 70px;}
 #advTabsContent .chosen-container.chosen-with-drop .chosen-drop {z-index: 9999; position: absolute;}
+.noread {background: #F8E4DA}
