--- a/www/style.css
+++ b/www/style.css
@@ -4,7 +4,8 @@ table {font-size: 13px}
 .clear {display: block;  visibility: hidden;  content: ".";  height: 0px;  clear: both;  overflow: hidden; float: none}
 a {text-decoration: underline; color: #930; font-weight: 600}
 a:hover {color: #630}
-a.btn {text-decoration: none}
+a.btn {text-decoration: none; box-sizing: border-box; font-weight: 400}
+a.btn.span4 {width: 286px}
 .tab-pane {overflow-x: hidden}
 
 /*boot-fix*/
@@ -28,6 +29,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .btn-warning-primary:hover, .btn-warning-primary:focus {background: #792800 !important}
 .fileupload {height: 30px; float: left; position: relative; overflow: hidden; margin-right: 5px; width: 150px}
 .fileupload input {position: absolute;  top: 0;   right: 0;  cursor: pointer;  opacity: 0.0; filter: alpha(opacity=0);  font-size: 300px; height: 200px;}
+
+.banner img, img.banner {border: 3px #fff solid; border-radius: 4px; box-shadow: 0px 1px 5px rgba(0,0,0,0.5);}
+.banner img:hover, img.banner:hover {box-shadow: 0px 0px 3px rgba(0,0,0,0.5)}
 
 .gallery-upload p.upload-descr {font-size: 11px; margin-top: 15px}
 .gallery-upload .fileupload {height: auto; float: none; position: relative; overflow: hidden; width: 430px; margin-top: 15px;}
@@ -162,7 +166,7 @@ header .site-descr, header .soc-share {font-size: 12px; color: #fff; line-height
 
 .main-menu .navbar-inner {border: 0; box-shadow: none}
 .main-menu .navbar-inner {padding-right: 0px; margin-bottom: 50px; background: url(images/bg-main-menu.png) top left repeat-x; border-radius: 5px}
-.main-menu .navbar-inner .nav li a{color: #973d00; text-transform: uppercase; font-size: 15px; font-weight: 600; text-shadow:  0 -1px 1px #4b1e00;}
+.main-menu .navbar-inner .nav li a{color: #973d00; text-transform: uppercase; font-size: 15px; font-weight: 600; text-shadow:  0 -1px 1px #4b1e00; margin: 0 15px;}
 .main-menu .navbar-inner .main-nav-1 li a{padding: 10px 7px}
 .main-menu .navbar-inner .main-nav-2 li a{padding: 10px 8px}
 .main-menu .navbar-inner .nav li{padding: 10px 0px;}
@@ -635,6 +639,14 @@ table.clubs-results {background: #fff; margin-bottom: 0}
 table.clubs-results td.club-name img {max-width: 32px; max-height: 32px; margin-right: 5px}
 input.span-mini{width: 76px; }
 
+table.search-filter-block td {padding-left: 8px}
+table.search-filter-block input.span3 {width: 210px; height: 24px;}
+table.search-filter-block input.span6 {width: 442px; height: 24px;}
+table.search-filter-block select.span3{width: 210px; }
+table.search-filter-block .chosen-container.chosen-container-multi {width: 454px !important; }
+table.search-filter-block textarea{width: 438px; }
+table.adv-price td {margin: 0 auto; width: 940px}
+
 /* user-page */
 .user-about-me dt{font-weight: 400; color: #444; font-style: italic}
 .user-about-me dd a{font-weight: 400}
@@ -692,6 +704,7 @@ ul.user-friends-menu li a{text-decoration: none}
 .modal form{margin-bottom: 0px}
 .modal.bg-white {background-image:  url(images/bg-left.png), url(images/bg-right.png), url(images/bg-top-title.png), url(images/bg-bottom.png); background-color: #fff; background-repeat: repeat-y, repeat-y, repeat-x, repeat-x; background-position: left, right, top, bottom; box-shadow: inset 0px 0px 20px #000; border: 0}
 .modal-notitle {background-image: url(images/bg-left.png), url(images/bg-right.png), url(images/bg-top.png), url(images/bg-bottom.png), url(images/bg-lthr-block.jpg) !important; background-repeat: repeat-y, repeat-y, repeat-x, repeat-x, repeat; background-position: left, right, top, bottom, top left ; box-shadow: inset 0px 0px 20px #000; }
+.modal600 {width: 600px; margin-left: -300px}
 .modal700 {width: 700px; margin-left: -350px}
 .modal800 {width: 816px; margin-left: -408px}
 .modal900 {width: 900px; margin-left: -450px}
@@ -937,3 +950,34 @@ table.routes .route {min-width: 200px}
 .adv-gallery li {display: inline-block}
 .adv-gallery li img{width: 50px; height: 50px; box-sizing: border-box;}
 .adv-gallery li:first-child img{width: 100%; height: auto; margin-bottom: 7px}
+
+table.search-filter-block > tbody > tr {vertical-align: top;}
+table td.price-td input {width: 140px; display: inline-block; height: 24px}
+table td.price-td.colspan2 input {width: 380px; display: inline-block; height: 24px}
+table td.price-td select {width: 50px; display: inline-block}
+
+button.multiselect.dropdown-toggle {height: 34px; background: #ffffff; border: 1px solid #cccccc;  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); font-size: 13px; text-align: left; position: relative}
+button.multiselect.dropdown-toggle b.caret{position: absolute; top: 20%; right: 10px}
+.btn-group.open > button.multiselect.dropdown-toggle {background: #ffffff;}
+
+ul.multiselect-container li a {text-decoration: none; padding-left: 10px}
+ul.multiselect-container li.active a  {background: #FBB450}
+ul.multiselect-container li.active:hover a  {background: #F89406}
+#td-car-options button.multiselect.dropdown-toggle, .rowspan2 button.multiselect.dropdown-toggle {width: 454px}
+#td-car-options ul.multiselect-container, .rowspan2 ul.multiselect-container {width: 240px}
+#add-options-accordion .accordion-group {border: 0; width: 942px}
+#add-options-accordion .accordion-group table.search-filter-block {width: 932px !important;}
+
+/*style-temp*/
+#advTabsContent {position: static !important; z-index: 1; overflow: hidden}
+#advTabsContent .multiselect-container {z-index: 9999; position: absolute}
+#advTabsContent .multiselect-container li, #advTabsContent .multiselect-container li a {z-index: 9999; position: relative}
+#advTabsContent .btn-group.open {z-index: 9999; position: relative}
+#advTabsContent .search-filter-block {z-index: 9999; position: relative}
+
+/*events*/
+.events-page table.search-filter-block input[type="submit"] {height: auto !Important; margin: 15px auto 10px auto}
+.events-page ul.multiselect-container, .events-page .rowspan2 ul.multiselect-container {width: 450px}
+.events-page ul.multiselect-container .multiselect-search, .events-page .rowspan2 ul.multiselect-container .multiselect-search {width: 410px; margin-left: 7px !important}
+.events-page img.country-flag {max-width: 16px; max-height: 16px; padding-right: 5px}
+table .ui-slider-horizontal {width: 90%; margin-left: 10px !important}
