--- a/www/style_temp.css
+++ b/www/style_temp.css
@@ -10,3 +10,5 @@
 .user-info .user-profs {list-style: none; margin-left: 0; margin-bottom: 0px; text-align: right;  margin-right: 10px;}
 .user-info .user-profs li{padding: 0 1px; font-style: italic; font-size: 13px;}
 .user-info .user-club {font-style: italic; font-size: 13px; text-align: right;  margin-right: 10px;}
+.my-compts .compt-img img {max-width: 60px; max-height: 60px}
+.ratings-page .btn-group label {font-weight: normal}
