--- a/www/style.css
+++ b/www/style.css
@@ -171,7 +171,7 @@ header .site-descr, header .soc-share {font-size: 12px; color: #fff; line-height
 .main-menu .navbar-inner {padding-right: 0px; margin-bottom: 50px; background: url(images/bg-main-menu.png) top left repeat-x; border-radius: 5px}
 .main-menu .navbar-inner .nav li a{color: #973d00; text-transform: uppercase; font-size: 15px; font-weight: 600; text-shadow:  0 -1px 1px #4b1e00; margin: 0 15px}
 .main-menu .navbar-inner .main-nav-1 li a{padding: 10px 7px}
-.main-menu .navbar-inner .main-nav-2 li a{padding: 10px 8px}
+.main-menu .navbar-inner .main-nav-2 li a{padding: 10px 6px}
 .main-menu .navbar-inner .nav li{padding: 10px 0px;}
 .main-menu .navbar .nav > .active > a, .main-menu .navbar .nav > .active > a:hover,.main-menu .navbar .nav > .active > a:focus {color: #fff; border-radius: 5px; background-color: #6f3612;  box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);}
 .main-menu .navbar-inner .nav li a:hover {color: #fff}
@@ -288,11 +288,12 @@ ul.my-actions-menu li.my-messages {background: url(images/icon-my-messages.png) 
 ul.my-actions-menu li.my-clubs {background: url(images/icon-my-clubs.png) left center no-repeat}
 ul.my-actions-menu li.my-events {background: url(images/icon-my-events.png) left center no-repeat}
 ul.my-actions-menu li.my-news {background: url(images/icon-my-news.png) left center no-repeat}
-ul.my-actions-menu li.my-contacts {background: url(images/icon-my-contacts.png) left center no-repeat}
+ul.my-actions-menu li.my-contacts {background: url(images/icon-my-friends.png) left center no-repeat}
 ul.my-actions-menu li.my-horses {background: url(images/icon-my-horses.png) left center no-repeat}
 ul.my-actions-menu li.my-gallery {background: url(images/icon-my-gallery.png) left center no-repeat}
 ul.my-actions-menu li.my-adv {background: url(images/icon-my-adv.png) left center no-repeat}
 ul.my-actions-menu li.my-profile {background: url(images/icon-my-profile.png) left center no-repeat}
+ul.my-actions-menu li.my-me {background: url(images/icon-me.png) left center no-repeat}
 h3.inner-bg {background: url(images/bg-h3-inner.jpg) top left repeat-x; padding: 10px; margin: 0 -2px 10px -2px; color: #fff; text-shadow: 0 1px 0 #000; margin-top: -1px; text-transform: uppercase;}
 h3.inner-bg span, h3.inner-bg span a {font-size: 13px; font-style: italic; font-weight: normal; text-transform: none; text-decoration: none; color: #fff}
 h2 {font-size: 20px; font-weight: 600; margin: 5px 0}
@@ -545,7 +546,7 @@ ul.dropdown-menu {position: absolute; z-index: 9999;}
 table.competitions-table.curr-compt-levels {border-bottom: 1px #cccccc solid}
 table.competitions-table.curr-compt-levels td.td-complex {padding: 0}
 table.competitions-table.curr-compt-levels td.td-complex .curr-compt-date{font-size: 20px; font-weight: 200; color: #6d3512}
-table.competitions-table.curr-compt-levels td.td-complex .curr-compt-path{font-size: 20px; font-weight: 200; color: #bb7a1f}
+table.competitions-table.curr-compt-levels td.td-complex .curr-compt-path a{font-size: 20px; font-weight: 200; color: #bb7a1f}
 table.competitions-table.curr-compt-levels td.td-complex .curr-compt-more {display: none}
 table.competitions-table.curr-compt-levels td.td-complex:hover {background:  url(images/bg-curr-compt-select.jpg) top left}
 table.competitions-table.curr-compt-levels td.td-complex:hover .curr-compt-more{display: block}
@@ -555,7 +556,8 @@ table.competitions-table.curr-compt-levels td.td-complex .curr-compt-more ul.spa
 table.competitions-table.curr-compt-levels td.td-complex .curr-compt-more ul > li{float: left; width: 302px; margin-left: 8px}
 table.competitions-table.curr-compt-levels td.td-complex .curr-compt-more ul > li span {color: #8a390a}
 table.compt-results td.table-caption {background: #ffeed7; text-align: center;}
-table.compt-results td span {font-weight: bold}
+.compt-results .height-caption {background: #ffeed7 !important; text-align: center; font-size: 14px !important;font-weight: bold;text-transform: uppercase; font-style: italic}
+table.compt-results td:not(.name) span {font-weight: bold}
 table.compt-results td.n, table.competitions-table.curr-compt-levels table.compt-results td.total, table.competitions-table.curr-compt-levels table.compt-results td.standarts {font-weight: bold}
 
 .my-compts td{line-height: 15px}
@@ -577,7 +579,7 @@ table.compt-results td.n, table.competitions-table.curr-compt-levels table.compt
 .club-tabs .tab-pane h4 {color: #6d3512; font-weight: bold; font-size: 16px; text-transform: uppercase}
 .club-tabs .tab-pane h4 span{font-size: 13px; font-style: italic; font-weight: normal; text-transform: none; text-decoration: none;}
 .club-tabs ul.clubs-members {list-style: none; margin-left: 0}
-.club-tabs ul.clubs-members li{float: left; width: 70px; height: 100px; overflow: hidden; margin-left: 3px; font-size: 11px; line-height: 12px}
+.club-tabs ul.clubs-members li{float: left; width: 90px; height: 100px; overflow: hidden; margin-left: 3px; font-size: 11px; line-height: 12px}
 .club-tabs ul.clubs-members li img{width: 50px; height: 50px; margin-bottom: 5px}
 .club-tabs ul.clubs-members li a{text-decoration: none}
 .club-tabs ul.club-additional-features {list-style: none; margin: 0;}
